--- a/EnergomeraTestTask/EnergomeraTestTask/EnergomeraTestTask.csproj
+++ b/EnergomeraTestTask/EnergomeraTestTask/EnergomeraTestTask.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NetTopologySuite" Version="2.6.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="CoordinateSharp" Version="3.2.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
